# ARINFUSE-TOOL

./: .gitignore  README.md
ARInfuseMockUp/: ARInfuseMockUp.pro  ARInfuseMockUp.pro.user.4.8-pre1  ARInfuseMockUp.pro.user.rej  SetUpGIS.txt  configuration.cpp  configuration.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  settings.ui  settings_view.cpp  settings_view.h  tool_runner.cpp  tool_runner.h  trainee_view.cpp  trainee_view.h  trainer_view.cpp  trainer_view.h  viewarvr.cpp  viewarvr.h  viewarvr.ui  viewgis.cpp  viewgis.h  viewgis.ui
Example/: camera_mins.txt  utilities.xml  xyz.txt
Tools_exe/GIS-MODULE/GIS-MODULE/rasterImages/: Nicosia.jpg.ovr  Nicosia_rectify.tfw
Tools_exe/GIS-MODULE/GIS-MODULE/workingAreaFiles/: appurtenances.qix  appurtenances.sbn  appurtenances.sbx  appurtenances.shp  appurtenances.shp.xml  appurtenances.shx  building_nodes.qix  building_nodes.sbn  building_nodes.sbx  building_nodes.shp  building_nodes.shp.xml  building_nodes.shx  buildings.dbf  buildings.qix  buildings.sbn  buildings.sbx  buildings.shp.xml  buildings.shx  cabinet.dbf  cabinet.qix  cabinet.sbn  cabinet.sbx  cabinet.shp  cabinet.shp.xml  cabinet.shx  electricity.qix  electricity.sbn  electricity.sbx  electricity.shp.xml  electricity.shx  manhole.dbf  manhole.qix  manhole.sbn  manhole.sbx  manhole.shp  manhole.shp.xml  manhole.shx  oilGas.qix  oilGas.sbn  oilGas.sbx  (+59 more)
Tools_exe/LARABuild/LARA_Data/: app.info  boot.config  globalgamemanagers  globalgamemanagers.assets  level0  resources.assets  sharedassets0.assets  sharedassets0.assets.resS
build-ARInfuseMockUp-Desktop_Qt_5_11_2_MinGW_32bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_mainwindow.h  ui_settings.h  ui_viewarvr.h  ui_viewgis.h
build-ARInfuseMockUp-Desktop_Qt_5_11_2_MinGW_32bit-Debug/debug/: moc_mainwindow.cpp  moc_settings.cpp  moc_viewarvr.cpp  moc_viewgis.cpp
build-ARInfuseMockUp-Desktop_Qt_5_11_2_MinGW_32bit-Debug/debug/clippedXMLFiles/: clipped_underNetworks.xml
build-ARInfuseMockUp-Desktop_Qt_5_11_2_MinGW_32bit-Debug/debug/rasterImages/: Nicosia_rectify.tif.aux.xml  Nicosia_rectify.tif.ovr
build-ARInfuseMockUp-Desktop_Qt_5_11_2_MinGW_32bit-Debug/debug/workingAreaFiles/: Building_nodes.dbf  Building_nodes.qix  Building_nodes.sbn  Building_nodes.sbx  Building_nodes.shp  Building_nodes.shp.xml  Building_nodes.shx  Buildings.dbf  Buildings.qix  Buildings.sbn  Buildings.sbx  Buildings.shp  Buildings.shx  Sewage_pipes.dbf  Sewage_pipes.qix  Sewage_pipes.sbn  Sewage_pipes.sbx  Sewage_pipes.shp  Sewage_pipes.shp.xml  Sewage_pipes.shx  gas_genova_z.dbf  gas_genova_z.qix  gas_genova_z.sbn  gas_genova_z.sbx  gas_genova_z.shp  gas_genova_z.shx  sewage_genova_z.dbf  sewage_genova_z.qix  sewage_genova_z.sbn  sewage_genova_z.sbx  sewage_genova_z.shp  sewage_genova_z.shp.xml  sewage_genova_z.shx  water_genova_z.dbf  water_genova_z.qix  water_genova_z.sbn  water_genova_z.sbx  water_genova_z.shp  water_genova_z.shp.xml  water_genova_z.shx  (+14 more)
tools/: .clang-format  .gitignore  CMakeLists.txt
tools/arinfuse/: CMakeLists.txt
tools/arinfuse/camera_calibration/: CMakeLists.txt  calibration_window.cc  calibration_window.h  camera_calibration.cc  camera_calibration.h  main.cc  two_vanishing_points_calibration.cc  two_vanishing_points_calibration.h  vanishing_points_calibration.h
tools/arinfuse/pose_estimation/: CMakeLists.txt  main.cc  pose_estimation.cc  pose_estimation.h  pose_estimation_window.cc  pose_estimation_window.h
tools/arinfuse/xml_preproccessor/: CMakeLists.txt  main.cc
tools/opencv_utils/: CMakeLists.txt  opencv_image_viewer.cc  opencv_image_viewer.h
